--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ sudo: false
 
 jdk:
   - oraclejdk7
+  
+# Handle git submodules yourself
+git:
+    submodules: false
+# Use sed to replace the SSH URL with the public URL, then initialize submodules
+before_install:
+    - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+    - git submodule update --init --recursive  
